--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "karma-typescript-es6-transform": "^1.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.5.3"
-  }
+  },
+  "repository": "github:kshetline/ks-math"
 }
