--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ks-math",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Miscellaneous math functions",
   "main": "dist/index.js",
   "typings": "dist/index",
   "scripts": {
     "build": "tsc",
+    "publish": "tsc && npm publish",
     "test": "karma start",
     "watch:build": "tsc --watch"
   },
@@ -18,12 +19,9 @@
   ],
   "author": "Kerry Shetline <kerry@shetline.com>",
   "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/jasmine": "^2.8.12",
-    "@types/lodash": "^4.14.118",
+    "@types/jasmine": "^2.8.16",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^2.0.5",
@@ -32,7 +30,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.13",
     "karma-typescript-es6-transform": "^1.0.4",
-    "tslint": "^5.11.0",
+    "tslint": "^5.15.0",
     "typescript": "^2.9.2"
   },
   "repository": "github:kshetline/ks-math"
