--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ks-math",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Miscellaneous math functions",
   "main": "dist/index.js",
   "typings": "dist/index",
   "scripts": {
     "build": "tsc",
-    "publish": "tsc && npm publish",
+    "prepublishOnly": "tsc",
     "test": "karma start",
     "watch:build": "tsc --watch"
   },
