--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "ks-math",
-  "version": "1.2.1",
+  "name": "@tubular/math",
+  "version": "2.0.1",
   "description": "Miscellaneous math functions",
-  "main": "dist/index.js",
-  "typings": "dist/index",
+  "type": "module",
+  "browser": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "prepublishOnly": "tsc",
-    "test": "karma start",
-    "watch:build": "tsc --watch"
+    "build": "rimraf dist/ && tsc && webpack && webpack --env target=umd",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint \"src/**/*.ts\"",
+    "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts",
+    "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts"
   },
   "keywords": [
     "angle",
@@ -21,17 +24,31 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "@types/jasmine": "^2.8.17",
-    "jasmine-core": "^2.99.1",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^5.0.3",
-    "karma-typescript-es6-transform": "^4.1.1",
-    "tslint": "^5.20.1",
-    "typescript": "^2.9.2"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/register": "^7.12.10",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "babel-loader": "^8.2.2",
+    "chai": "^4.2.0",
+    "eslint": "^7.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jasmine": "^4.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   },
-  "repository": "github:kshetline/ks-math"
+  "repository": "github:kshetline/tubular_math"
 }
