--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tubular/math",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Miscellaneous math functions",
   "type": "module",
   "browser": "dist/index.umd.js",
@@ -9,9 +9,8 @@
   "scripts": {
     "build": "rimraf dist/ && tsc && webpack && webpack --env target=umd",
     "prepublishOnly": "npm run build",
-    "lint": "eslint \"src/**/*.ts\"",
-    "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts",
-    "test-dev": "mocha --require ts-node/register -w --watch-extensions ts src/**/*.spec.ts"
+    "lint": "eslint 'src/**/*.ts'",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
   },
   "keywords": [
     "angle",
@@ -25,7 +24,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
@@ -33,7 +32,7 @@
     "@typescript-eslint/parser": "^4.10.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.16.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.22.1",
@@ -44,7 +43,7 @@
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "ts-node-dev": "^1.1.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
