--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@tubular/math",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "description": "Miscellaneous math functions",
-  "browser:es5": "dist/web/index.js",
+  "browser-es5": "dist/web5/index.js",
+  "browser-es6": "dist/web/index.js",
   "main": "dist/es5/index.js",
   "module": "dist/index.js",
+  "es2015": "dist/es6/index.js",
   "esm2015": "dist/index.js",
   "typings": "dist/index",
   "sideEffects": false,
   "scripts": {
-    "build": "rimraf dist/ && tsc && tsc --build tsconfig.es5.json && webpack",
+    "build": "rimraf dist/ && tsc && tsc --build tsconfig.es6.json && tsc --build tsconfig.es5.json && webpack && webpack --env esver=5",
     "prepublishOnly": "npm run build",
     "lint": "eslint 'src/**/*.ts'",
     "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
