--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@tubular/math",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Miscellaneous math functions",
+  "browser": "dist/web/index.js",
   "browser-es5": "dist/web5/index.js",
-  "browser-es6": "dist/web/index.js",
-  "main": "dist/es5/index.js",
+  "main": "dist/es6/index.js",
+  "main-es5": "dist/es5/index.js",
   "module": "dist/index.js",
-  "es2015": "dist/es6/index.js",
-  "esm2015": "dist/index.js",
+  "es2015": "dist/index.js",
   "typings": "dist/index",
   "sideEffects": false,
   "scripts": {
@@ -32,15 +32,15 @@
     "@babel/register": "^7.12.10",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jasmine": "^4.1.1",
+    "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
@@ -49,8 +49,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.0",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
   },
   "repository": "github:kshetline/tubular_math"
