--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0-alpha.2",
   "description": "Miscellaneous math functions",
   "browser": "dist/umd/index.js",
-  "cjs": "dist/cjs/index.cjs",
-  "main": "dist/fesm2015/index.js",
-  "module": "dist/fesm2015/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/fesm2015/index.mjs",
   "esm2015": "dist/index.js",
-  "fesm2015": "dist/fesm2015/index.js",
-  "typings": "dist/index",
-  "type": "module",
+  "fesm2015": "dist/fesm2015/index.mjs",
+  "typings": "dist/cjs/index",
   "sideEffects": false,
+  "exports": {
+    "node": {
+      "module": "./dist/fesm2015/index.mjs",
+      "require": "./dist/cjs/index.js"
+    },
+    "browser": {
+      "module": "./dist/fesm2015/index.mjs",
+      "default": "./dist/umd/index.js"
+    },
+    "default": "./dist/cjs/index.js"
+  },
   "scripts": {
     "build": "rimraf dist/ && tsc && webpack && webpack --env umd=true && webpack --env cjs=true",
     "prepublishOnly": "npm run build",
