--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-alpha.4",
   "description": "Miscellaneous math functions",
-  "browser": "dist/umd/index.js",
+  "web": "dist/umd/index.js",
   "main": "dist/cjs/index.js",
   "module": "dist/fesm2015/index.mjs",
   "esm2015": "dist/index.js",
   "fesm2015": "dist/fesm2015/index.mjs",
-  "typings": "dist/cjs/index",
+  "typings": "dist/index",
   "sideEffects": false,
   "exports": {
+    "type": "./dist/index.d.ts",
     "node": {
-      "module": "./dist/fesm2015/index.mjs",
+      "import": "./dist/fesm2015/index.mjs",
       "require": "./dist/cjs/index.js"
     },
     "browser": {
-      "module": "./dist/fesm2015/index.mjs",
-      "default": "./dist/umd/index.js"
+      "import": "./dist/fesm2015/index.mjs",
+      "script": "./dist/umd/index.js"
     },
     "default": "./dist/cjs/index.js"
+  },
+  "engines": {
+    "node": ">= 10.24.1"
   },
   "scripts": {
     "build": "rimraf dist/ && tsc && webpack && webpack --env umd=true && webpack --env cjs=true",
