--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0",
   "description": "Miscellaneous math functions",
   "web": "dist/umd/index.js",
   "main": "dist/cjs/index.js",
