--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.0",
+  "version": "3.0.1-alpha.0",
   "description": "Miscellaneous math functions",
   "web": "dist/umd/index.js",
   "main": "dist/cjs/index.js",
-  "module": "dist/fesm2015/index.mjs",
+  "module": "dist/fesm2015/index.js",
   "esm2015": "dist/index.js",
-  "fesm2015": "dist/fesm2015/index.mjs",
+  "fesm2015": "dist/fesm2015/index.js",
   "typings": "dist/index",
   "sideEffects": false,
   "exports": {
     "type": "./dist/index.d.ts",
     "node": {
-      "import": "./dist/fesm2015/index.mjs",
+      "import": "./dist/fesm2015/index.js",
       "require": "./dist/cjs/index.js"
     },
     "browser": {
-      "import": "./dist/fesm2015/index.mjs",
+      "import": "./dist/fesm2015/index.js",
       "script": "./dist/umd/index.js"
     },
     "default": "./dist/cjs/index.js"
@@ -25,7 +25,7 @@
     "node": ">= 10.24.1"
   },
   "scripts": {
-    "build": "rimraf dist/ && tsc && webpack && webpack --env umd=true && webpack --env cjs=true",
+    "build": "rimraf dist/ && tsc && rollup -c -m && webpack",
     "prepublishOnly": "npm run build",
     "lint": "eslint 'src/**/*.ts'",
     "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
@@ -60,6 +60,9 @@
     "mocha": "^9.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
+    "rollup": "^2.52.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "terser-webpack-plugin": "^5.1.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4",
     "webpack": "^5.39.1",
