--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.1-alpha.0",
+  "version": "3.0.1-alpha.1",
   "description": "Miscellaneous math functions",
   "web": "dist/umd/index.js",
   "main": "dist/cjs/index.js",
@@ -10,15 +10,9 @@
   "typings": "dist/index",
   "sideEffects": false,
   "exports": {
-    "type": "./dist/index.d.ts",
-    "node": {
-      "import": "./dist/fesm2015/index.js",
-      "require": "./dist/cjs/index.js"
-    },
-    "browser": {
-      "import": "./dist/fesm2015/index.js",
-      "script": "./dist/umd/index.js"
-    },
+    "import": "./dist/fesm2015/index.js",
+    "require": "./dist/cjs/index.js",
+    "script": "./dist/umd/index.js",
     "default": "./dist/cjs/index.js"
   },
   "engines": {
