--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "@tubular/math",
-  "version": "2.2.2",
+  "version": "3.0.1",
   "description": "Miscellaneous math functions",
-  "browser": "dist/web/index.js",
-  "browser-es5": "dist/web5/index.js",
-  "main": "dist/es6/index.js",
-  "main-es5": "dist/es5/index.js",
-  "module": "dist/index.js",
-  "es2015": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/fesm2015/index.js",
+  "esm2015": "dist/index.js",
+  "fesm2015": "dist/fesm2015/index.js",
   "typings": "dist/index",
   "sideEffects": false,
+  "exports": {
+    "import": "./dist/fesm2015/index.js",
+    "require": "./dist/cjs/index.js",
+    "script": "./dist/umd/index.js",
+    "default": "./dist/cjs/index.js"
+  },
+  "engines": {
+    "node": ">= 10.24.1"
+  },
   "scripts": {
-    "build": "rimraf dist/ && tsc && tsc --build tsconfig.es6.json && tsc --build tsconfig.es5.json && webpack && webpack --env esver=5",
+    "build": "rimraf dist/ && tsc && rollup -c -m && webpack",
     "prepublishOnly": "npm run build",
     "lint": "eslint 'src/**/*.ts'",
     "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
@@ -26,31 +33,34 @@
   "author": "Kerry Shetline <kerry@shetline.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/register": "^7.12.10",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/register": "^7.14.5",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "babel-loader": "^8.2.2",
-    "chai": "^4.2.0",
-    "eslint": "^7.19.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-chai-friendly": "^0.6.0",
-    "eslint-plugin-import": "^2.22.1",
+    "chai": "^4.3.4",
+    "eslint": "^7.29.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-chai-friendly": "^0.7.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "mocha": "^8.2.1",
+    "mocha": "^9.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-node-externals": "^2.5.2"
+    "rollup": "^2.52.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "repository": "github:kshetline/tubular_math"
 }
