--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Miscellaneous math functions",
   "main": "dist/cjs/index.js",
   "module": "dist/fesm2015/index.js",
@@ -36,8 +36,10 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/register": "^7.14.5",
-    "@types/chai": "^4.2.18",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "babel-loader": "^8.2.2",
@@ -46,14 +48,13 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-chai-friendly": "^0.7.1",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
     "mocha": "^9.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "terser-webpack-plugin": "^5.1.3",
     "ts-node": "^10.0.0",
