--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-chai-friendly": "^0.7.1",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "mocha": "^9.0.1",
