--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES2018",
-    "typeRoots": [
-      "node_modules/@types"
+    "types": [
+      "chai",
+      "mocha",
+      "node"
     ],
     "lib": [
       "es2020",
