--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tubular/math",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Miscellaneous math functions",
   "main": "dist/cjs/index.js",
   "module": "dist/fesm2015/index.js",
@@ -15,7 +15,7 @@
     "default": "./dist/cjs/index.js"
   },
   "engines": {
-    "node": ">= 10.24.1"
+    "node": ">=10.24.1"
   },
   "scripts": {
     "build": "rimraf dist/ && tsc && rollup -c -m && webpack",
@@ -36,8 +36,10 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/register": "^7.14.5",
-    "@types/chai": "^4.2.18",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "babel-loader": "^8.2.2",
@@ -49,11 +51,11 @@
     "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
     "mocha": "^9.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "terser-webpack-plugin": "^5.1.3",
     "ts-node": "^10.0.0",
