--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "@tubular/math",
-  "version": "3.3.1",
+  "version": "3.4.0-alpha.0",
   "description": "Miscellaneous math functions",
-  "main": "dist/cjs/index.js",
-  "module": "dist/fesm2015/index.js",
-  "esm2015": "dist/index.js",
-  "fesm2015": "dist/fesm2015/index.js",
+  "module": "dist/index.min.mjs",
+  "main": "dist/index.min.cjs",
+  "browser": "dist/index.min.js",
+  "umd:main": "dist/index.min.js",
   "typings": "dist/index",
   "sideEffects": false,
   "exports": {
-    "import": "./dist/fesm2015/index.js",
-    "require": "./dist/cjs/index.js",
-    "script": "./dist/umd/index.js",
-    "default": "./dist/cjs/index.js"
+    "import": "./dist/index.min.mjs",
+    "require": "./dist/index.min.cjs",
+    "browser": "./dist/index.min.js",
+    "default": "./dist/index.min.cjs"
   },
   "engines": {
     "node": ">=10.24.1"
   },
   "scripts": {
-    "build": "rimraf dist/ && tsc && rollup -c -m && webpack",
-    "prepublishOnly": "npm run build",
-    "lint": "eslint 'src/**/*.ts'",
-    "test": "nyc --reporter=html mocha --require ts-node/register src/**/*.spec.ts"
+    "build": "rimraf dist/ && rollup -c",
+    "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info",
+    "prepack": "npm run lint && npm run test && npm run build",
+    "lint": "eslint --ext .ts 'src/**/*.ts'",
+    "test": "nyc --reporter=text --reporter=html mocha --require ts-node/register src/**/*.spec.ts && npm run coverage"
   },
   "keywords": [
     "angle",
@@ -33,36 +34,24 @@
   "author": "Kerry Shetline <kerry@shetline.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/register": "^7.14.5",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/chai": "^4.2.19",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "babel-loader": "^8.2.2",
-    "chai": "^4.3.4",
-    "eslint": "^7.29.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-chai-friendly": "^0.7.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jasmine": "^4.1.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "mocha": "^9.0.1",
-    "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.52.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@stylistic/eslint-plugin": "^4.4.1",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^22.15.32",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "chai": "^4.4.1",
+    "eslint": "^9.29.0",
+    "eslint-plugin-chai-friendly": "^1.1.0",
+    "mocha": "^10.8.2",
+    "nyc": "^17.1.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.43.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "terser-webpack-plugin": "^5.1.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-node-externals": "^3.0.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "repository": "github:kshetline/tubular_math"
 }
