--- a/package.json
+++ b/package.json
@@ -53,5 +53,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
+  "nyc": {
+    "exclude": [
+      "**/*.spec.ts"
+    ]
+  },
   "repository": "github:kshetline/tubular_math"
 }
