--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./src/**/*", "rollup.config.js"],
+  "include": ["./src/**/*", "eslint.config.mjs", "rollup.config.js"],
   "exclude": [
     "dist",
     "node_modules"
