--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,5 @@
-/.idea
-/coverage
-/karma.conf.js
-/src
-/tsconfig.json
-/tslint.json
-/.eslintrc.json
-/.nyc_output
-/webpack.config.*js
-*.js.map
-!/dist/**/*.js.map
-*.spec.d.ts
-*.spec.js
-*.tgz
-/rollup.config.js
+**/*
+!/dist/**/*
+!package.json
+!LICENSE.md
+!README.md
